--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.3",
-    "mongoose": "^8.2.0",
-    "nodemon": "^3.1.0"
+    "mongoose": "^8.2.0"
   }
 }
